--- a/app/views/races/show.html.slim
+++ b/app/views/races/show.html.slim
@@ -6,6 +6,7 @@
     span.glyphicon.glyphicon-pencil
     |  Edit
   = import_button 'Import track', import_tracks_race_path(@race)
+  = import_button 'Import markers', import_markers_race_path(@race)
   = link_to watch_race_path(@race), class: 'btn btn-primary' do
     span.glyphicon.glyphicon-eye-open
     |  Watch race
