--- a/app/views/devices/index.html.slim
+++ b/app/views/devices/index.html.slim
@@ -15,7 +15,7 @@
           = f.search_field :name_cont, placeholder: 'Name', class: 'form-control'
         .col-md-4
           = f.search_field :position_eq, placeholder: 'Position', class: 'form-control'
-        input.invisible type="submit" tabindex="-1"
+        input.hidden type="submit" tabindex="-1"
 hr
 .table-responsive
   table.table.table-striped.table-bordered.table-hover
