--- a/app/assets/stylesheets/_map.scss
+++ b/app/assets/stylesheets/_map.scss
@@ -22,7 +22,7 @@
     }
     .device-actions {
       flex-basis: 400px;
-      padding-left: 15px;
+      padding: 0 15px;
       height: 100%;
       overflow: auto;
       overflow-x: hidden;
