--- a/app/views/races/_device_actions.slim
+++ b/app/views/races/_device_actions.slim
@@ -2,4 +2,5 @@ dl.dl-horizontal
   dd
     h4
       b #{device.name}, #{device.index}, #{device.number}
-  dd= render 'devices/commands', device: device, remote: true
+  dd
+    = render 'devices/commands', device: device, remote: true
