--- a/app/views/races/_device_actions.slim
+++ b/app/views/races/_device_actions.slim
@@ -1,6 +1,6 @@
 dl.dl-horizontal
   dd
     h4
-      b #{device.name}, #{device.index}, #{device.number}
+      b #{device.name}, #{device.position}, #{device.index}
   dd
     = render 'devices/commands', device: device, remote: true
