--- a/app/views/races/show.html.slim
+++ b/app/views/races/show.html.slim
@@ -5,6 +5,7 @@
   = link_to edit_race_path(@race), class: 'btn btn-primary' do
     span.glyphicon.glyphicon-pencil
     |  Edit
+  = import_button 'Import limited tracks', import_limited_tracks_race_path(@race)
   = import_button 'Import track', import_tracks_race_path(@race)
   = import_button 'Import markers', import_markers_race_path(@race)
   = link_to watch_race_path(@race), class: 'btn btn-primary' do
