fix device form

--- a/app/views/devices/_form.html.slim
+++ b/app/views/devices/_form.html.slim
@@ -10,13 +10,23 @@
       ul
         - @device.errors.full_messages.each do |msg|
           li= msg
-  .form-group
-    label.control-label.col-sm-2 Identifier
-    .col-sm-10
-      .input-group
-        span class="input-group-addon"
-          span= f.object.index
-        = f.text_field :number, class: "form-control", disabled: true
+  - if @device.persisted?
+    .form-group
+      label.control-label.col-sm-2 Identifier
+      .col-sm-10
+        .input-group
+          span class="input-group-addon"
+            span= @device.index
+          = f.text_field :number, class: "form-control", disabled: true
+  - else
+    .form-group
+      = f.label :number, class: "col-sm-2 control-label"
+      .col-sm-10
+        = f.text_field :number, class: "form-control"
+    .form-group
+      = f.label :index, class: "col-sm-2 control-label"
+      .col-sm-10
+        = f.text_field :index, class: "form-control"
   .form-group
     = f.label :name, class: "col-sm-2 control-label"
     .col-sm-10
