--- a/app/assets/stylesheets/_map.scss
+++ b/app/assets/stylesheets/_map.scss
@@ -7,7 +7,7 @@
 }
 
 .watch-container {
-  height: calc(100vh - #{$navbar-height});
+  height: calc(100vh - #{$header-height});
   display: flex;
   flex-direction: column;
 
