--- a/app/views/races/show.html.slim
+++ b/app/views/races/show.html.slim
@@ -61,5 +61,4 @@ dl.dl-horizontal
     - if @race.tracks.any?
       #map data-tracks=(@race.tracks.map { |track| track.slice(:route, :id, :name, :length_in_km, :kind, :speed_limit, :start_time, :end_time) }.to_json)
 
-      - @race.tracks.each do |track|
-        i.absolute-tooltip data-toggle="tooltip" data-placement="right" data-trigger="manual" data-title="#{track.name}, #{track.kind}<br>Length: #{track.length_in_km}<br>Speed limit: #{track.speed_limit}km/h" data-id=track.id data-container='#map' data-html="true"
+      = render 'track_tooltips', tracks: @race.tracks
