time dimension geo json

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import "bootstrap-generators";
 @import "bootstrap-datetimepicker";
 @import "leaflet";
+@import "leaflet-timedimension/dist/leaflet.timedimension.control";
 
 $header-height: $navbar-height + 1;
 
