watch race from index

--- a/app/views/races/index.html.slim
+++ b/app/views/races/index.html.slim
@@ -29,4 +29,4 @@
           td
             = link_to 'Show', race
           td
-            = link_to 'Edit', edit_race_path(race)
+            = link_to 'Watch', watch_race_path(@race)
