--- a/app/views/devices/_connected_devices.slim
+++ b/app/views/devices/_connected_devices.slim
@@ -1,3 +1,3 @@
-h2 Connected devices (#{devices.size})
+h2 Connected devices (#{devices.size}), enabled disconnected devices: #{Device.enabled.size - devices.size}
 pre
   = devices.map { |device| %Q(#{device.number} - #{device.index}, #{$redis.get("data_lines:#{device.id}")}) }.join("\n")
