--- a/app/views/races/show.html.slim
+++ b/app/views/races/show.html.slim
@@ -46,7 +46,7 @@ dl.dl-horizontal
       .row
         .col-md-6
           .form-group
-            = number_field_tag :speed, nil, placeholder: 'Exceeded amount', class: 'form-control'
+            = number_field_tag :speed, nil, placeholder: 'Exceeded amount, km/h', class: 'form-control'
         .col-md-6
           .form-group
             = number_field_tag :time, nil, placeholder: 'Exceeded time, seconds', class: 'form-control'
