full width labels

--- a/app/views/devices/watch.slim
+++ b/app/views/devices/watch.slim
@@ -7,14 +7,14 @@
   .row
     .col-xs-5
       .form-group
-        label
+        label style='width: 100%'
           .input-group
             span class="input-group-addon"
               span class="glyphicon glyphicon-calendar"
             = text_field_tag :timestamp_from, 10.minutes.ago, placeholder: 'Time from', class: 'form-control datetimepicker'
     .col-xs-5
       .form-group
-        label
+        label style='width: 100%'
           .input-group
             span class="input-group-addon"
               span class="glyphicon glyphicon-calendar"
