rename home link

--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -7,7 +7,7 @@ nav.navbar.navbar-inverse.navbar-fixed-top role="navigation"
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      = link_to "eFloat", root_path, class: "navbar-brand"
+      = link_to "Rally Live Admin", root_path, class: "navbar-brand"
     #navbar.collapse.navbar-collapse
       ul.nav.navbar-nav
         li
