--- a/app/views/devices/_connected_devices.slim
+++ b/app/views/devices/_connected_devices.slim
@@ -1,3 +1,10 @@
-h2 Connected devices (#{devices.size}), enabled disconnected devices: #{Device.enabled.size - devices.size}
+h2 Connected devices (#{devices.size})
 pre
   = devices.map { |device| %Q(#{device.number} - #{device.index}, #{$redis.get("data_lines:#{device.id}")}) }.join("\n")
+
+hr
+
+- disconnected_devices = Device.enabled.where.not(id: devices)
+h2 Enabled disconnected devices (#{disconnected_devices.size})
+pre
+  = disconnected_devices.map { |device| %Q(#{device.number} - #{device.index}, #{$redis.get("data_lines:#{device.id}")}) }.join("\n")
