--- a/app/views/devices/_connected_devices.slim
+++ b/app/views/devices/_connected_devices.slim
@@ -1,6 +1,6 @@
 h2 Connected devices (#{devices.size})
 pre
-  = devices.map { |device| %Q(#{device.number} - #{device.index}, #{$redis.get("data_lines:#{device.id}")}) }.join("\n")
+  = devices.map { |device| %Q(#{device.position} - #{device.index}, #{$redis.get("data_lines:#{device.id}")}) }.join("\n")
 
 hr
 
