--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,10 +4,12 @@ html
     meta charset="utf-8"
     meta http-equiv="X-UA-Compatible" content="IE=edge"
     meta name="viewport" content="width=device-width, initial-scale=1"
-    meta name="description" content=""
-    meta name="author" content=""
+    meta name="author" content="Simonas Gildutis"
+    - if controller_name === 'devices' && action_name === 'index'
+      meta name="turbolinks-cache-control" content="no-cache"
+
     title Rally Live Admin
-    /! HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries
+
     /[if lt IE 9]
       = javascript_include_tag "https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js", "https://oss.maxcdn.com/respond/1.4.2/respond.min.js"
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
