--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -13,7 +13,7 @@ nav.navbar.navbar-inverse.navbar-fixed-top role="navigation"
         li
           = link_to 'Races', races_path, data: { urls: '/' }
         li
-          = link_to 'Devices', devices_path
+          = link_to 'Devices', devices_path, data: { no_turbolink: true }
         li
           = link_to 'Users', users_path
         li
