--- a/app/views/devices/watch.slim
+++ b/app/views/devices/watch.slim
@@ -3,7 +3,7 @@
 .container
   .row
     .col-xs-12
-      h1= "#{@race.title}, #{@device.name}"
+      h1= "#{@race.title}, #{@device.position}, #{@device.name}"
   .row
     .col-xs-5
       .form-group
