--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -15,6 +15,8 @@ nav.navbar.navbar-inverse.navbar-fixed-top role="navigation"
         li
           = link_to 'Devices', devices_path
         li
+          = link_to 'Drivers', drivers_path
+        li
           = link_to 'Users', users_path
         li
           = link_to 'Tickets', tickets_path
