disconnected devices not disabled

--- a/app/views/devices/_connected_devices.slim
+++ b/app/views/devices/_connected_devices.slim
@@ -4,6 +4,6 @@ pre
 
 hr
 
-h2 Enabled disconnected devices (#{disconnected_devices.size})
+h2 Not disabled disconnected devices (#{disconnected_devices.size})
 pre
   = render_disconnected_devices(disconnected_devices)
