--- a/app/views/races/index.html.slim
+++ b/app/views/races/index.html.slim
@@ -27,6 +27,6 @@
           td
             = race.end_time
           td
-            = link_to 'Show', race
+            = link_to 'Details', race
           td
             = link_to 'Watch', watch_race_path(race)
