--- a/app/views/devices/index.html.slim
+++ b/app/views/devices/index.html.slim
@@ -48,22 +48,7 @@ hr
         th
         th Action
     tbody
-      - @devices.each do | device |
-        tr
-          td= device.number
-          td= device.index
-          td= device.name
-          td= device.position
-          td= device.kind
-          td
-            = link_to 'Show', device
-            br
-            = link_to 'Edit', edit_device_path(device)
-          td
-            - unless device.disabled?
-              = link_to 'Disable', device_path(device, { device: { state: :disabled } }), method: :patch, class: 'btn btn-danger'
-            - unless device.enabled?
-              = link_to 'Enable', device_path(device, { device: { state: :enabled } }), method: :patch, class: 'btn btn-success'
+      = render @devices
 
 .row
   .col-md-3
