--- a/app/views/races/show.html.slim
+++ b/app/views/races/show.html.slim
@@ -9,8 +9,11 @@
   = import_button 'Import track', import_tracks_race_path(@race)
   = import_button 'Import markers', import_markers_race_path(@race)
   = link_to watch_race_path(@race), class: 'btn btn-primary' do
-    span.glyphicon.glyphicon-eye-open
+    span.glyphicon.glyphicon-film
     |  Watch race
+  = link_to race_path(@race, race: { public: !@race.public }), method: :patch, class: "btn btn-#{@race.public ? 'danger' : 'success'}" do
+    span.glyphicon(class="glyphicon-eye-#{@race.public ? 'close' : 'open'}")
+    |  Make #{@race.public ? 'private' : 'public'}
 
   h1
     | Show race
